use openai to identify dates based on filenames

--- a/process.ipynb
+++ b/process.ipynb
@@ -8,9 +8,28 @@
    "source": [
     "import os\n",
     "import subprocess\n",
+    "import re\n",
     "source_dir = \"C:\\\\projects\\\\local\\\\video_analysis\"\n",
     "ffmpeg_path = os.environ['LOCALAPPDATA'] + \"\\\\Microsoft\\\\WinGet\\\\Packages\\\\Gyan.FFmpeg_Microsoft.Winget.Source_8wekyb3d8bbwe\\\\ffmpeg-6.0-full_build\\\\bin\\\\ffmpeg.exe\"\n",
-    "import whisper\n"
+    "import whisper\n",
+    "os.environ[\"OPENAI_API_TYPE\"]=\"azure\"\n",
+    "os.environ[\"OPENAI_API_VERSION\"]=\"2023-05-15\"\n",
+    "\n",
+    "# get settings from files\n",
+    "with open(source_dir + \"\\\\..\\\\openai-base.txt\", \"r\") as f:\n",
+    "    os.environ[\"OPENAI_API_BASE\"] = f.read()\n",
+    "with open(source_dir + \"\\\\..\\\\openai-key.txt\", \"r\") as f:\n",
+    "    os.environ[\"OPENAI_API_KEY\"] = f.read()\n",
+    "\n",
+    "from langchain.llms import AzureOpenAI\n",
+    "from langchain.chat_models import AzureChatOpenAI\n",
+    "from langchain.prompts.chat import ChatPromptTemplate\n",
+    "llm = AzureOpenAI(\n",
+    "    deployment_name=\"gpt-35-turbo\"\n",
+    ")\n",
+    "chat_model = AzureChatOpenAI(\n",
+    "    deployment_name=\"gpt-35-turbo\"\n",
+    ")\n"
    ]
   },
   {
@@ -78,6 +97,43 @@
     "                    print('wrote to {}'.format(txt_file))\n",
     "process_files()\n",
     "print('generated TXTs for all MP3s in ' + source_dir)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat_prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", \"\"\"You are a helpful assistant that identifies the date a file was created based on information in the filename.\n",
+    "    All dates are between 2019 and 2030, and any dates in the filename are written with the month before the date (ie. american style).\n",
+    "    The resulting date should be formatted as YYYY-mm-dd - ie. 2021-02-15.\n",
+    "    Your response should _only_ contain the date, and nothing else.\n",
+    "    \"\"\"),\n",
+    "    (\"human\", \"{text}\"),\n",
+    "])\n",
+    "chain = chat_prompt | chat_model\n",
+    "\n",
+    "# find all txt files in source_dir (and subdirectories) that do not yet have a date file and ask the LLM to guess the date\n",
+    "def process_files():\n",
+    "    for root, dirs, files in os.walk(source_dir):\n",
+    "        for file in files:\n",
+    "            if file.endswith(\".txt\"):\n",
+    "                txt_file = os.path.join(root, file)\n",
+    "                date_file = txt_file[:-4] + '.date'\n",
+    "                if not os.path.isfile(date_file):\n",
+    "                    print('getting date for {}'.format(txt_file))\n",
+    "                    result = chain.invoke({ \"text\": txt_file})\n",
+    "                    date = result.content\n",
+    "                    # use a regular expression to make sure date looks like YYYY-mm-dd\n",
+    "                    if not re.match(r'^\\d{4}-\\d{2}-\\d{2}$', date):\n",
+    "                        print('invalid date: {} generated for {}'.format(date, txt_file))\n",
+    "                        continue\n",
+    "                    with open(date_file, 'w') as f:\n",
+    "                        f.write(date)\n",
+    "process_files()\n",
+    "print('generated DATEs for all TXTs in ' + source_dir)\n"
    ]
   }
  ],
