add code to generate summaries

--- a/process.ipynb
+++ b/process.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'ChatChain' from 'langchain.chains' (c:\\projects\\video-summarization\\.venv\\lib\\site-packages\\langchain\\chains\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[50], line 20\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlangchain\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdocstore\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdocument\u001b[39;00m \u001b[39mimport\u001b[39;00m Document\n\u001b[0;32m     19\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlangchain\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mprompts\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mchat\u001b[39;00m \u001b[39mimport\u001b[39;00m PromptTemplate, ChatPromptTemplate\n\u001b[1;32m---> 20\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlangchain\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mchains\u001b[39;00m \u001b[39mimport\u001b[39;00m (\n\u001b[0;32m     21\u001b[0m     StuffDocumentsChain,\n\u001b[0;32m     22\u001b[0m     LLMChain,\n\u001b[0;32m     23\u001b[0m     ChatChain,\n\u001b[0;32m     24\u001b[0m     ReduceDocumentsChain,\n\u001b[0;32m     25\u001b[0m     MapReduceDocumentsChain,\n\u001b[0;32m     26\u001b[0m )\n\u001b[0;32m     27\u001b[0m llm \u001b[39m=\u001b[39m AzureOpenAI(\n\u001b[0;32m     28\u001b[0m     deployment_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mgpt-35-turbo-16k\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     29\u001b[0m )\n\u001b[0;32m     30\u001b[0m chat_model \u001b[39m=\u001b[39m AzureChatOpenAI(\n\u001b[0;32m     31\u001b[0m     deployment_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mgpt-35-turbo-16k\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     32\u001b[0m )\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'ChatChain' from 'langchain.chains' (c:\\projects\\video-summarization\\.venv\\lib\\site-packages\\langchain\\chains\\__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import subprocess\n",
@@ -23,12 +35,20 @@
     "\n",
     "from langchain.llms import AzureOpenAI\n",
     "from langchain.chat_models import AzureChatOpenAI\n",
-    "from langchain.prompts.chat import ChatPromptTemplate\n",
+    "from langchain.docstore.document import Document\n",
+    "from langchain.prompts.chat import PromptTemplate, ChatPromptTemplate\n",
+    "from langchain.chains import (\n",
+    "    StuffDocumentsChain,\n",
+    "    LLMChain,\n",
+    "    ChatChain,\n",
+    "    ReduceDocumentsChain,\n",
+    "    MapReduceDocumentsChain,\n",
+    ")\n",
     "llm = AzureOpenAI(\n",
-    "    deployment_name=\"gpt-35-turbo\"\n",
+    "    deployment_name=\"gpt-35-turbo-16k\"\n",
     ")\n",
     "chat_model = AzureChatOpenAI(\n",
-    "    deployment_name=\"gpt-35-turbo\"\n",
+    "    deployment_name=\"gpt-35-turbo-16k\"\n",
     ")\n"
    ]
   },
@@ -134,6 +154,93 @@
     "                        f.write(date)\n",
     "process_files()\n",
     "print('generated DATEs for all TXTs in ' + source_dir)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getting answer for 2021-10-28: C:\\projects\\local\\video_analysis\\2021\\All Company Meeting_10.28.21\\2021-10-28 RP All Company Meeting.txt\n",
+      "writing answer to C:\\projects\\local\\video_analysis\\2021\\All Company Meeting_10.28.21\\2021-10-28 RP All Company Meeting.marketing\n",
+      "During the meeting, the content discussed various topics including Breast Cancer Awareness Month, updates on the company's one-year anniversary, digital health and therapeutics offerings, and end-of-year reminders. However, it failed to directly address the questions regarding the marketing team's activities or the results of marketing efforts.\n",
+      "generated marketings for all TXTs in C:\\projects\\local\\video_analysis\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ok, now for the real work.\n",
+    "#  1. given a question and answer-extension, find all files with a txt+date file, but no answer-extension file\n",
+    "#  2. ask the LLM to answer the question based on the file\n",
+    "#  3. write the answer to the answer-extension file\n",
+    "\n",
+    "with open(source_dir + \"\\\\question.input\", \"r\") as f:\n",
+    "    question = f.read().strip()\n",
+    "with open(source_dir + \"\\\\answer-extension.input\", \"r\") as f:\n",
+    "    answerExt = f.read().strip()\n",
+    "\n",
+    "# heavily based on https://github.com/langchain-ai/langchain/blob/master/libs/langchain/langchain/chains/combine_documents/map_reduce.py\n",
+    "document_prompt = PromptTemplate(\n",
+    "    input_variables=[\"page_content\"],\n",
+    "    template=\"{page_content}\"\n",
+    ")\n",
+    "document_variable_name = \"context\"\n",
+    "# The prompt here should take as an input variable the\n",
+    "# `document_variable_name`\n",
+    "prompt = PromptTemplate.from_template(\n",
+    "    \"\"\"You are a helpful assistant that summarizes existing content with the goal of answering these questions:\n",
+    "    {}\n",
+    "    If the content supplied isn't relevant to the question, you will say so.\n",
+    "    \"\"\".format(question) + \"Summarize this content: {context}\"\n",
+    ")\n",
+    "llm_chain = LLMChain(llm=chat_model, prompt=prompt)\n",
+    "# chat_chain = chat_prompt | chat_model\n",
+    "# chat_chain = ChatChain()\n",
+    "# We now define how to combine these summaries\n",
+    "reduce_prompt = PromptTemplate.from_template(\n",
+    "    \"Combine these summaries: {context}\"\n",
+    ")\n",
+    "reduce_llm_chain = LLMChain(llm=chat_model, prompt=reduce_prompt)\n",
+    "combine_documents_chain = StuffDocumentsChain(\n",
+    "    llm_chain=reduce_llm_chain,\n",
+    "    document_prompt=document_prompt,\n",
+    "    document_variable_name=document_variable_name\n",
+    ")\n",
+    "reduce_documents_chain = ReduceDocumentsChain(\n",
+    "    combine_documents_chain=combine_documents_chain,\n",
+    ")\n",
+    "chain = MapReduceDocumentsChain(\n",
+    "    llm_chain=llm_chain,\n",
+    "    reduce_documents_chain=reduce_documents_chain,\n",
+    ")\n",
+    "\n",
+    "# find all txt files in source_dir (and subdirectories) that do not yet have a date file and ask the LLM to guess the date\n",
+    "def process_files():\n",
+    "    for root, dirs, files in os.walk(source_dir):\n",
+    "        for file in files:\n",
+    "            if file.endswith(\".date\"):\n",
+    "                date_file = os.path.join(root, file)\n",
+    "                txt_file = date_file[:-5] + '.txt'\n",
+    "                if os.path.isfile(txt_file):\n",
+    "                    answer_file = date_file[:-5] + '.' + answerExt\n",
+    "                    if not os.path.isfile(answer_file):\n",
+    "                        with open(txt_file, \"r\") as f:\n",
+    "                            content = f.read().strip()\n",
+    "                        with open(date_file, \"r\") as f:\n",
+    "                            date = f.read().strip()\n",
+    "                        print('getting answer for {}: {}'.format(date, txt_file))\n",
+    "                        result = chain.invoke({ \"input_documents\": [Document(page_content=content)] })\n",
+    "                        answer = result['output_text']\n",
+    "                        print('writing answer to {}'.format(answer_file))\n",
+    "                        with open(answer_file, 'w') as f:\n",
+    "                            f.write(answer)\n",
+    "                        return\n",
+    "process_files()\n",
+    "print('generated {}s for all TXTs in {}'.format(answerExt, source_dir))\n"
    ]
   }
  ],
