dump out results

--- a/process.ipynb
+++ b/process.ipynb
@@ -217,6 +217,40 @@
     "process_files()\n",
     "print('generated {}s for all TXTs in {}'.format(answerExt, source_dir))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now find and summarize the results\n",
+    "with open(source_dir + \"\\\\answer-extension.input\", \"r\") as f:\n",
+    "    answerExt = f.read().strip()\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "# find all txt files in source_dir (and subdirectories) that do not yet have a date file and ask the LLM to guess the date\n",
+    "def process_files():\n",
+    "    for root, dirs, files in os.walk(source_dir):\n",
+    "        for file in files:\n",
+    "            if file.endswith(\".date\"):\n",
+    "                date_file = os.path.join(root, file)\n",
+    "                txt_file = date_file[:-5] + '.txt'\n",
+    "                answer_file = date_file[:-5] + '.' + answerExt\n",
+    "                if os.path.isfile(txt_file) and os.path.isfile(answer_file):\n",
+    "                    with open(date_file, \"r\") as f:\n",
+    "                        date = f.read().strip()\n",
+    "                    with open(answer_file, \"r\") as f:\n",
+    "                        answer = f.read().strip()\n",
+    "                    results.append(('{} - {}'.format(date, txt_file), answer))\n",
+    "process_files()\n",
+    "\n",
+    "# sort results by date and output\n",
+    "results.sort(key=lambda x: x[0])\n",
+    "for result in results:\n",
+    "    print('{}\\n{}\\n\\n'.format(result[0], result[1]))\n"
+   ]
   }
  ],
  "metadata": {
