wait to load the whisper model (which takes some time) until we actually need it

--- a/process.ipynb
+++ b/process.ipynb
@@ -69,8 +69,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = whisper.load_model('medium.en', device='cuda')\n",
-    "\n",
     "# find all mp3 files in source_dir (and subdirectories) that do not yet have a txt file and convert them with whisper\n",
     "def process_files():\n",
     "    for root, dirs, files in os.walk(source_dir):\n",
@@ -79,6 +77,10 @@
     "                mp3_file = os.path.join(root, file)\n",
     "                txt_file = mp3_file[:-4] + '.txt'\n",
     "                if not os.path.isfile(txt_file):\n",
+    "                    if model is None:\n",
+    "                        print('loading whisper model...')\n",
+    "                        model = whisper.load_model('medium.en', device='cuda')\n",
+    "\n",
     "                    print('processing {}'.format(mp3_file))\n",
     "                    result = model.transcribe(mp3_file)\n",
     "                    # result has the following structure:\n",
