try AnalyzeDocumentChain instead

--- a/process.ipynb
+++ b/process.ipynb
@@ -25,17 +25,17 @@
     "from langchain.chat_models import AzureChatOpenAI\n",
     "from langchain.docstore.document import Document\n",
     "from langchain.prompts.chat import PromptTemplate, ChatPromptTemplate\n",
+    "from langchain.chains.question_answering import load_qa_chain\n",
     "from langchain.chains import (\n",
     "    StuffDocumentsChain,\n",
     "    LLMChain,\n",
     "    ReduceDocumentsChain,\n",
     "    MapReduceDocumentsChain,\n",
-    ")\n",
-    "llm = AzureOpenAI(\n",
-    "    deployment_name=\"gpt-35-turbo-16k\"\n",
+    "    AnalyzeDocumentChain,\n",
     ")\n",
     "chat_model = AzureChatOpenAI(\n",
-    "    deployment_name=\"gpt-35-turbo-16k\"\n",
+    "    deployment_name=\"gpt-35-turbo-16k\",\n",
+    "    temperature=0\n",
     ")\n"
    ]
   },
@@ -161,40 +161,44 @@
     "with open(source_dir + \"\\\\answer-extension.input\", \"r\") as f:\n",
     "    answerExt = f.read().strip()\n",
     "\n",
-    "# heavily based on https://github.com/langchain-ai/langchain/blob/master/libs/langchain/langchain/chains/combine_documents/map_reduce.py\n",
-    "document_prompt = PromptTemplate(\n",
-    "    input_variables=[\"page_content\"],\n",
-    "    template=\"{page_content}\"\n",
-    ")\n",
-    "document_variable_name = \"context\"\n",
-    "# The prompt here should take as an input variable the\n",
-    "# `document_variable_name`\n",
-    "prompt = PromptTemplate.from_template(\n",
-    "    \"\"\"You are a helpful assistant that summarizes existing content with the goal of answering these questions:\n",
-    "    {}\n",
-    "    If the content supplied isn't relevant to the question, you will say so.\n",
-    "    \"\"\".format(question) + \"Summarize this content: {context}\"\n",
-    ")\n",
-    "llm_chain = LLMChain(llm=chat_model, prompt=prompt)\n",
-    "# chat_chain = chat_prompt | chat_model\n",
-    "# chat_chain = ChatChain()\n",
-    "# We now define how to combine these summaries\n",
-    "reduce_prompt = PromptTemplate.from_template(\n",
-    "    \"Combine these summaries: {context}\"\n",
-    ")\n",
-    "reduce_llm_chain = LLMChain(llm=chat_model, prompt=reduce_prompt)\n",
-    "combine_documents_chain = StuffDocumentsChain(\n",
-    "    llm_chain=reduce_llm_chain,\n",
-    "    document_prompt=document_prompt,\n",
-    "    document_variable_name=document_variable_name\n",
-    ")\n",
-    "reduce_documents_chain = ReduceDocumentsChain(\n",
-    "    combine_documents_chain=combine_documents_chain,\n",
-    ")\n",
-    "chain = MapReduceDocumentsChain(\n",
-    "    llm_chain=llm_chain,\n",
-    "    reduce_documents_chain=reduce_documents_chain,\n",
-    ")\n",
+    "# # heavily based on https://github.com/langchain-ai/langchain/blob/master/libs/langchain/langchain/chains/combine_documents/map_reduce.py\n",
+    "# document_prompt = PromptTemplate(\n",
+    "#     input_variables=[\"page_content\"],\n",
+    "#     template=\"{page_content}\"\n",
+    "# )\n",
+    "# document_variable_name = \"context\"\n",
+    "# # The prompt here should take as an input variable the\n",
+    "# # `document_variable_name`\n",
+    "# prompt = PromptTemplate.from_template(\n",
+    "#     \"\"\"You are a helpful assistant that summarizes existing content with the goal of answering these questions:\n",
+    "#     {}\n",
+    "#     If the content supplied isn't relevant to the question, you will say so.\n",
+    "#     \"\"\".format(question) + \"Summarize this content: {context}\"\n",
+    "# )\n",
+    "# llm_chain = LLMChain(llm=chat_model, prompt=prompt)\n",
+    "# # chat_chain = chat_prompt | chat_model\n",
+    "# # chat_chain = ChatChain()\n",
+    "# # We now define how to combine these summaries\n",
+    "# reduce_prompt = PromptTemplate.from_template(\n",
+    "#     \"Combine these summaries: {context}\"\n",
+    "# )\n",
+    "# reduce_llm_chain = LLMChain(llm=chat_model, prompt=reduce_prompt)\n",
+    "# combine_documents_chain = StuffDocumentsChain(\n",
+    "#     llm_chain=reduce_llm_chain,\n",
+    "#     document_prompt=document_prompt,\n",
+    "#     document_variable_name=document_variable_name\n",
+    "# )\n",
+    "# reduce_documents_chain = ReduceDocumentsChain(\n",
+    "#     combine_documents_chain=combine_documents_chain,\n",
+    "# )\n",
+    "# chain = MapReduceDocumentsChain(\n",
+    "#     llm_chain=llm_chain,\n",
+    "#     reduce_documents_chain=reduce_documents_chain,\n",
+    "# )\n",
+    "\n",
+    "# based on https://python.langchain.com/docs/use_cases/question_answering/analyze_document\n",
+    "qa_chain = load_qa_chain(chat_model, chain_type=\"map_reduce\")\n",
+    "qa_document_chain = AnalyzeDocumentChain(combine_docs_chain=qa_chain)\n",
     "\n",
     "# find all txt files in source_dir (and subdirectories) that do not yet have a date file and ask the LLM to guess the date\n",
     "def process_files():\n",
@@ -211,8 +215,9 @@
     "                        with open(date_file, \"r\") as f:\n",
     "                            date = f.read().strip()\n",
     "                        print('getting answer for {}: {}'.format(date, txt_file))\n",
-    "                        result = chain.invoke({ \"input_documents\": [Document(page_content=content)] })\n",
-    "                        answer = result['output_text']\n",
+    "                        answer = qa_document_chain.run(input_document=content, question=question)\n",
+    "                        # result = chain.invoke({ \"input_documents\": [Document(page_content=content)] })\n",
+    "                        # answer = result['output_text']\n",
     "                        print('writing answer to {}'.format(answer_file))\n",
     "                        with open(answer_file, 'w') as f:\n",
     "                            f.write(answer)\n",
