--- a/process.ipynb
+++ b/process.ipynb
@@ -9,16 +9,25 @@
     "import os\n",
     "import subprocess\n",
     "import re\n",
+    "import json\n",
     "source_dir = \"C:\\\\projects\\\\local\\\\video_analysis\"\n",
+    "video_dir = 'video'\n",
+    "audio_dir = 'audio'\n",
+    "text_dir = 'text'\n",
+    "date_dir = 'date'\n",
     "ffmpeg_path = os.environ['LOCALAPPDATA'] + \"\\\\Microsoft\\\\WinGet\\\\Packages\\\\Gyan.FFmpeg_Microsoft.Winget.Source_8wekyb3d8bbwe\\\\ffmpeg-6.0-full_build\\\\bin\\\\ffmpeg.exe\"\n",
     "import whisper\n",
+    "import torch\n",
     "os.environ[\"OPENAI_API_TYPE\"]=\"azure\"\n",
     "os.environ[\"OPENAI_API_VERSION\"]=\"2023-05-15\"\n",
+    "whisper_model_name = 'medium.en'\n",
+    "whisper_device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print('Using whisper model {} on device {}'.format(whisper_model_name, whisper_device))\n",
     "\n",
     "# get settings from files\n",
-    "with open(source_dir + \"\\\\..\\\\openai-base.txt\", \"r\") as f:\n",
+    "with open(os.path.join(source_dir, \"openai-base.txt\"), \"r\") as f:\n",
     "    os.environ[\"OPENAI_API_BASE\"] = f.read()\n",
-    "with open(source_dir + \"\\\\..\\\\openai-key.txt\", \"r\") as f:\n",
+    "with open(os.path.join(source_dir, \"openai-key.txt\"), \"r\") as f:\n",
     "    os.environ[\"OPENAI_API_KEY\"] = f.read()\n",
     "\n",
     "from langchain.llms import AzureOpenAI\n",
@@ -45,14 +54,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# find all mp3 files in source_dir (and subdirectories) that do not yet have a mp3 file and convert them with ffmpeg\n",
+    "def move_by_extension(src, target, extension, newEx):\n",
+    "    print('moving {} from {} to {}'.format(extension, os.path.join(source_dir, src), os.path.join(source_dir, target)))\n",
+    "    start = os.path.join(source_dir, src)\n",
+    "    for root, dirs, files in os.walk(start):\n",
+    "        relpath = os.path.relpath(root, start)\n",
+    "        for file in files:\n",
+    "            if file.endswith(extension):\n",
+    "                f = os.path.join(source_dir, src, relpath, file)\n",
+    "                t = os.path.join(source_dir, target, relpath, file[:-len(extension)] + newEx)\n",
+    "                os.makedirs(os.path.dirname(t), exist_ok=True)\n",
+    "                os.rename(f, t)\n",
+    "                # print('moving {} to {}'.format(f, t))\n",
+    "                # return\n",
+    "# use this to reorg from old structure to new structure\n",
+    "# move_by_extension(video_dir, audio_dir, '.mp3', '.mp3')\n",
+    "# move_by_extension(video_dir, text_dir, '.txt', '.txt')\n",
+    "# move_by_extension(video_dir, date_dir, '.date', '.txt')\n",
+    "# move_by_extension(video_dir, 'ext-folder', '.ext', '.txt')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# find all mp4 files in source_dir (and subdirectories) that do not yet have a mp3 file and convert them with ffmpeg\n",
     "def process_files():\n",
-    "    for root, dirs, files in os.walk(source_dir):\n",
+    "    start = os.path.join(source_dir, video_dir)\n",
+    "    for root, dirs, files in os.walk(start):\n",
+    "        relpath = os.path.relpath(root, start)\n",
     "        for file in files:\n",
     "            if file.endswith(\".mp4\"):\n",
-    "                mp4_file = os.path.join(root, file)\n",
-    "                mp3_file = mp4_file[:-4] + '.mp3'\n",
+    "                mp4_file = os.path.join(source_dir, video_dir, relpath, file)\n",
+    "                mp3_file = os.path.join(source_dir, audio_dir, relpath, file[:-4] + '.mp3')\n",
     "                if not os.path.isfile(mp3_file):\n",
+    "                    print('want to create {} from {}'.format(mp3_file, mp4_file))\n",
+    "                    return\n",
     "                    cmd = [ffmpeg_path, '-i', mp4_file, '-vn', '-ar', '44100', '-ac', '2', '-ab', '192k', '-f', 'mp3', mp3_file]\n",
     "                    print(cmd)\n",
     "                    proc = subprocess.Popen(cmd)\n",
@@ -71,17 +113,22 @@
    "source": [
     "# find all mp3 files in source_dir (and subdirectories) that do not yet have a txt file and convert them with whisper\n",
     "def process_files():\n",
-    "    for root, dirs, files in os.walk(source_dir):\n",
+    "    model = None\n",
+    "    start = os.path.join(source_dir, audio_dir)\n",
+    "    for root, dirs, files in os.walk(start):\n",
+    "        relpath = os.path.relpath(root, start)\n",
     "        for file in files:\n",
     "            if file.endswith(\".mp3\"):\n",
-    "                mp3_file = os.path.join(root, file)\n",
-    "                txt_file = mp3_file[:-4] + '.txt'\n",
-    "                if not os.path.isfile(txt_file):\n",
+    "                mp3_file = os.path.join(source_dir, audio_dir, relpath, file)\n",
+    "                txt_file = os.path.join(source_dir, text_dir, relpath, file[:-4] + '.txt')\n",
+    "                json_file = os.path.join(source_dir, text_dir, relpath, file[:-4] + '.json')\n",
+    "                if not os.path.isfile(txt_file) or not(os.path.isfile(json_file)):\n",
+    "                    print('using {} to make {} and {}'.format(mp3_file, txt_file, json_file))\n",
     "                    if model is None:\n",
     "                        print('loading whisper model...')\n",
-    "                        model = whisper.load_model('medium.en', device='cuda')\n",
+    "                        model = whisper.load_model(whisper_model_name, device=whisper_device)\n",
+    "                        print('loaded whisper model')\n",
     "\n",
-    "                    print('processing {}'.format(mp3_file))\n",
     "                    result = model.transcribe(mp3_file)\n",
     "                    # result has the following structure:\n",
     "                    #  text: string\n",
@@ -103,7 +150,9 @@
     "                    with open(txt_file, 'w') as f:\n",
     "                        for segment in result['segments']:\n",
     "                            f.write(segment['text'] + '\\n')\n",
-    "                    print('wrote to {}'.format(txt_file))\n",
+    "                    with open(json_file, 'w') as f:\n",
+    "                        f.write(json.dumps(result['segments']))\n",
+    "                    print('wrote to {} and {}'.format(txt_file, json_file))\n",
     "process_files()\n",
     "print('generated TXTs for all MP3s in ' + source_dir)\n"
    ]
@@ -126,13 +175,15 @@
     "\n",
     "# find all txt files in source_dir (and subdirectories) that do not yet have a date file and ask the LLM to guess the date\n",
     "def process_files():\n",
-    "    for root, dirs, files in os.walk(source_dir):\n",
+    "    start = os.path.join(source_dir, text_dir)\n",
+    "    for root, dirs, files in os.walk(start):\n",
+    "        relpath = os.path.relpath(root, start)\n",
     "        for file in files:\n",
     "            if file.endswith(\".txt\"):\n",
-    "                txt_file = os.path.join(root, file)\n",
-    "                date_file = txt_file[:-4] + '.date'\n",
+    "                txt_file = os.path.join(source_dir, text_dir, relpath, file)\n",
+    "                date_file = os.path.join(source_dir, date_dir, relpath, file[:-4] + '.txt')\n",
     "                if not os.path.isfile(date_file):\n",
-    "                    print('getting date for {}'.format(txt_file))\n",
+    "                    print('getting date for {} to {}'.format(txt_file, date_file))\n",
     "                    result = chain.invoke({ \"text\": txt_file})\n",
     "                    date = result.content\n",
     "                    # use a regular expression to make sure date looks like YYYY-mm-dd\n",
@@ -156,10 +207,10 @@
     "#  2. ask the LLM to answer the question based on the file\n",
     "#  3. write the answer to the answer-extension file\n",
     "\n",
-    "with open(source_dir + \"\\\\question.input\", \"r\") as f:\n",
+    "with open(os.path.join(source_dir, \"question.input\"), \"r\") as f:\n",
     "    question = f.read().strip()\n",
-    "with open(source_dir + \"\\\\answer-extension.input\", \"r\") as f:\n",
-    "    answerExt = f.read().strip()\n",
+    "with open(os.path.join(source_dir, \"answer-dir.input\"), \"r\") as f:\n",
+    "    answer_dir = f.read().strip()\n",
     "\n",
     "# # heavily based on https://github.com/langchain-ai/langchain/blob/master/libs/langchain/langchain/chains/combine_documents/map_reduce.py\n",
     "# document_prompt = PromptTemplate(\n",
@@ -200,29 +251,30 @@
     "qa_chain = load_qa_chain(chat_model, chain_type=\"map_reduce\")\n",
     "qa_document_chain = AnalyzeDocumentChain(combine_docs_chain=qa_chain)\n",
     "\n",
-    "# find all txt files in source_dir (and subdirectories) that do not yet have a date file and ask the LLM to guess the date\n",
+    "# find all txt files in source_dir (and subdirectories) that have a text file and a date file, but no answer-dir file\n",
     "def process_files():\n",
-    "    for root, dirs, files in os.walk(source_dir):\n",
+    "    start = os.path.join(source_dir, text_dir)\n",
+    "    for root, dirs, files in os.walk(start):\n",
+    "        relpath = os.path.relpath(root, start)\n",
     "        for file in files:\n",
-    "            if file.endswith(\".date\"):\n",
-    "                date_file = os.path.join(root, file)\n",
-    "                txt_file = date_file[:-5] + '.txt'\n",
-    "                if os.path.isfile(txt_file):\n",
-    "                    answer_file = date_file[:-5] + '.' + answerExt\n",
-    "                    if not os.path.isfile(answer_file):\n",
-    "                        with open(txt_file, \"r\") as f:\n",
-    "                            content = f.read().strip()\n",
-    "                        with open(date_file, \"r\") as f:\n",
-    "                            date = f.read().strip()\n",
-    "                        print('getting answer for {}: {}'.format(date, txt_file))\n",
-    "                        answer = qa_document_chain.run(input_document=content, question=question)\n",
-    "                        # result = chain.invoke({ \"input_documents\": [Document(page_content=content)] })\n",
-    "                        # answer = result['output_text']\n",
-    "                        print('writing answer to {}'.format(answer_file))\n",
-    "                        with open(answer_file, 'w') as f:\n",
-    "                            f.write(answer)\n",
+    "            if file.endswith(\".txt\"):\n",
+    "                text_file = os.path.join(source_dir, text_dir, relpath, file)\n",
+    "                date_file = os.path.join(source_dir, date_dir, relpath, file)\n",
+    "                answer_file = os.path.join(source_dir, answer_dir, relpath, file)\n",
+    "                if os.path.isfile(text_file) and os.path.isfile(date_file) and not os.path.isfile(answer_file):\n",
+    "                    print('getting answer for {}: {}'.format(date, text_file))\n",
+    "                    with open(text_file, \"r\") as f:\n",
+    "                        content = f.read().strip()\n",
+    "                    with open(date_file, \"r\") as f:\n",
+    "                        date = f.read().strip()\n",
+    "                    answer = qa_document_chain.run(input_document=content, question=question)\n",
+    "                    # result = chain.invoke({ \"input_documents\": [Document(page_content=content)] })\n",
+    "                    # answer = result['output_text']\n",
+    "                    print('writing answer to {}'.format(answer_file))\n",
+    "                    with open(answer_file, 'w') as f:\n",
+    "                        f.write(answer)\n",
     "process_files()\n",
-    "print('generated {}s for all TXTs in {}'.format(answerExt, source_dir))\n"
+    "print('generated {} for all TXTs in {}'.format(answer_dir, os.path.join(source_dir, text_dir)))\n"
    ]
   },
   {
@@ -232,25 +284,27 @@
    "outputs": [],
    "source": [
     "# now find and summarize the results\n",
-    "with open(source_dir + \"\\\\answer-extension.input\", \"r\") as f:\n",
-    "    answerExt = f.read().strip()\n",
+    "with open(os.path.join(source_dir, \"answer-dir.input\"), \"r\") as f:\n",
+    "    answer_dir = f.read().strip()\n",
     "\n",
     "results = []\n",
     "\n",
-    "# find all txt files in source_dir (and subdirectories) that do not yet have a date file and ask the LLM to guess the date\n",
+    "# find all txt files in source_dir (and subdirectories) that have an answer and a date file\n",
     "def process_files():\n",
-    "    for root, dirs, files in os.walk(source_dir):\n",
+    "    start = os.path.join(source_dir, answer_dir)\n",
+    "    for root, dirs, files in os.walk(start):\n",
+    "        relpath = os.path.relpath(root, start)\n",
     "        for file in files:\n",
-    "            if file.endswith(\".date\"):\n",
-    "                date_file = os.path.join(root, file)\n",
-    "                txt_file = date_file[:-5] + '.txt'\n",
-    "                answer_file = date_file[:-5] + '.' + answerExt\n",
-    "                if os.path.isfile(txt_file) and os.path.isfile(answer_file):\n",
+    "            if file.endswith(\".txt\"):\n",
+    "                answer_file = os.path.join(source_dir, answer_dir, relpath, file)\n",
+    "                date_file = os.path.join(source_dir, date_dir, relpath, file)\n",
+    "                text_file = os.path.join(source_dir, text_dir, relpath, file)\n",
+    "                if os.path.isfile(date_file) and os.path.isfile(answer_file):\n",
     "                    with open(date_file, \"r\") as f:\n",
     "                        date = f.read().strip()\n",
     "                    with open(answer_file, \"r\") as f:\n",
     "                        answer = f.read().strip()\n",
-    "                    results.append(('{} - {}'.format(date, txt_file), answer))\n",
+    "                    results.append(('{} - {}'.format(date, text_file), answer))\n",
     "process_files()\n",
     "\n",
     "# sort results by date and output\n",
