tweak output messages

--- a/process.ipynb
+++ b/process.ipynb
@@ -125,9 +125,9 @@
     "                if not os.path.isfile(txt_file) or not(os.path.isfile(json_file)):\n",
     "                    print('using {} to make {} and {}'.format(mp3_file, txt_file, json_file))\n",
     "                    if model is None:\n",
-    "                        print('loading whisper model...')\n",
+    "                        print('loading {} whisper model on device {}...'.format(whisper_model_name, whisper_device))\n",
     "                        model = whisper.load_model(whisper_model_name, device=whisper_device)\n",
-    "                        print('loaded whisper model')\n",
+    "                        print('loaded whisper model - processing file')\n",
     "\n",
     "                    result = model.transcribe(mp3_file)\n",
     "                    # result has the following structure:\n",
@@ -149,7 +149,7 @@
     "                    print('got {} segments from {}'.format(len(result['segments']), mp3_file))\n",
     "                    with open(txt_file, 'w') as f:\n",
     "                        for segment in result['segments']:\n",
-    "                            f.write(segment['text'] + '\\n')\n",
+    "                            f.write(segment['text'].strip() + '\\n')\n",
     "                    with open(json_file, 'w') as f:\n",
     "                        f.write(json.dumps(result['segments']))\n",
     "                    print('wrote to {} and {}'.format(txt_file, json_file))\n",
